--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-starter-parent</artifactId>
-	   <version>2.4.1</version>
+	   <version>2.4.2</version>
     </parent>     
     <developers>
         <developer>
@@ -68,13 +68,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.11.2</version>
-        </dependency>			      	    		 	                                  		                  
-	    <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<version>4.13</version>
-		</dependency>  	   	    			   																																																																																												
+		</dependency>        			      	    		 	                                  		                   	   	    			   																																																																																												
   </dependencies>      
   <build>
   	<extensions>
